--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,9 @@ Build-Depends: debhelper (>= 7.0.50),
                libglib2.0-dev,
                libgtk2.0-dev,
                librsvg2-2.0-cil-dev,
-               libwnck1.0-cil-dev
+               libwnck1.0-cil-dev,
+               libmigemo1,
+               cmigemo-common
 Standards-Version: 3.9.2
 Homepage: http://do.davebsd.com/
 Vcs-Git: git://git.debian.org/git/pkg-cli-apps/packages/gnome-do.git
